2008-12-06  Edward Hervey  <edward.hervey@collabora.co.uk>

	* testsuite/Makefile.am:
	Add a way to run individual tests.
	'make test_bin.py.check' for example.

2008-12-06  Edward Hervey  <edward.hervey@collabora.co.uk>

	* examples/gst-discover:
	Beautify output of discoverer's duration.

2008-12-06  Edward Hervey  <edward.hervey@collabora.co.uk>

	* testsuite/test_event.py:
	Sinks now send GST_EVENT_LATENCY events upstream. Adapt test for that
	new behaviour.

2008-12-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* Makefile.am:
	* configure.ac:
	Add common to SUBDIRS and generate common/Makefile and
	common/m4/Makefile.

2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Apparently AC_CONFIG_MACRO_DIR breaks when using more
	than one macro directory, reverting last change.
	
2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Set AC_CONFIG_MACRO_DIR to common/m4 to point autoconf to
	our M4 macros.

2008-11-19  Alessandro Decina  <alessandro.d@gmail.com>

	* gst/gst.override:
	* testsuite/test_typefind.py:
	Wrap gst_type_find_peek.

2008-11-08  Alessandro Decina  <alessandro.d@gmail.com>

	* gst/base.defs:
	* gst/gstbase.override:
	Add GstBaseTransform::transform_size virtual.

2008-11-08  Alessandro Decina  <alessandro.d@gmail.com>

	reviewed by: Edward Hervey <edward.hervey@collabora.co.uk>

	* gst/__init__.py:
	Fix on systems that don't have dlopen or don't support RTLD_GLOBAL and
	RTLD_LAZY.

2008-11-07  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/gst.override:
	Fix compiler warning about missing format string.

2008-10-05  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to development -> 0.10.13.1

2008-10-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Thiemo Seufer <ths at networkno dot de>
	
	* gst/__init__.py:
	Use correct values for RTLD_GLOBAL and RTLD_LAZY on Linux/MIPS
	as the values are different there from all other Linux platforms.